perf: use of JVector API only when needed