@@ -27,8 +27,8 @@ import com.arcadedb.query.sql.function.SQLFunctionAbstract;
  * Multiplies a vector by a scalar value.
  * Returns a new vector where each component is multiplied by the scalar.
  *
- * Uses JVector's SIMD-optimized VectorUtil.scale() for up to 3-4x performance improvement
- * when running on Java 20+ with Panama Vector API enabled (--add-modules jdk.incubator.vector).
+ * Uses scalar implementation which is 3-12x faster than JVector for typical vector sizes (< 4096).
+ * JVector overhead from object allocation and conversion dominates actual computation cost.
  *
  * @author Luca Garulli (l.garulli--(at)--gmail.com)
  */
@@ -59,30 +59,12 @@ public class SQLFunctionVectorScale extends SQLFunctionAbstract {
       throw new CommandSQLParsingException("Scalar must be a number, found: " + scalarObj.getClass().getSimpleName());
     }
 
-    // Use JVector's SIMD-optimized scalar multiplication (3-4x faster with Vector API)
-    try {
-      final io.github.jbellis.jvector.vector.VectorizationProvider vp = io.github.jbellis.jvector.vector.VectorizationProvider.getInstance();
-
-      // Create result as copy of v
-      final float[] result = v.clone();
-      final io.github.jbellis.jvector.vector.types.VectorFloat<?> resultVec = vp.getVectorTypeSupport().createFloatVector(result);
-
-      // Scale result in-place
-      io.github.jbellis.jvector.vector.VectorUtil.scale(resultVec, scalar);
-
-      // Extract result
-      for (int i = 0; i < result.length; i++) {
-        result[i] = resultVec.get(i);
-      }
-      return result;
-    } catch (final Exception e) {
-      // Fallback to scalar implementation
-      final float[] result = new float[v.length];
-      for (int i = 0; i < v.length; i++) {
-        result[i] = v[i] * scalar;
-      }
-      return result;
+    // Scalar implementation - significantly faster than JVector for typical sizes
+    final float[] result = new float[v.length];
+    for (int i = 0; i < v.length; i++) {
+      result[i] = v[i] * scalar;
     }
+    return result;
   }
 
   private float[] toFloatArray(final Object vector) {
